unpackaged/main/default/objects/Job__c/fields/AC_Disconnect__c.field-meta.xml
<CustomField>
    <fullName>AC_Disconnect__c</fullName>
    <label>AC Disconnect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Missing Panel Cover Off</fullName>
            </value>
            <value>
                <fullName>Missing Each Disconnect</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
            <value>
                <fullName>Requires Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>