unpackaged/main/default/objects/Job__c/fields/AC_Disconnect_Score__c.field-meta.xml
<CustomField>
    <fullName>AC_Disconnect_Score__c</fullName>
    <formula>CASE( AC_Disconnect__c , "Complete", 3, "Missing Panel Cover Off", 1, "Missing Each Disconnect", 1, "Not Completed", 0, "Requires Service", -3, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AC Disconnect - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>