unpackaged/main/default/objects/Job__c/fields/Accepted_Facility_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Facility_Transfer__c</fullName>
    <label>Accepted Facility Transfer</label>
    <type>Date</type>
</CustomField>