unpackaged/main/default/objects/Job__c/fields/Account_Balance_IO__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance_IO__c</fullName>
    <formula>Opportunity__r.Account.celigo_sfnsio__Account_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Balance (IO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>