unpackaged/main/default/objects/Job__c/fields/Account_Number_ESD_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_ESD_ID_Number__c</fullName>
    <label>Account Number/ ESD ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>