unpackaged/main/default/objects/Job__c/fields/Account_Transfer_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Transfer_Received_Date__c</fullName>
    <label>Account Transfer Received Date</label>
    <type>Date</type>
</CustomField>