unpackaged/main/default/objects/Job__c/fields/Account_Transfer_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Transfer_Requested_Date__c</fullName>
    <label>Account Transfer Requested Date</label>
    <type>Date</type>
</CustomField>