unpackaged/main/default/objects/Job__c/fields/Action_Required_Notes__c.field-meta.xml
<CustomField>
    <fullName>Action_Required_Notes__c</fullName>
    <label>Action Required Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>