unpackaged/main/default/objects/Job__c/fields/Additional_Electrical_Photos_Needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Electrical_Photos_Needed__c</fullName>
    <label>Additional Electrical Photos Needed</label>
    <type>Date</type>
</CustomField>