unpackaged/main/default/objects/Job__c/fields/Additional_Roof_Photos_Needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Roof_Photos_Needed__c</fullName>
    <label>Additional Roof Photos Needed</label>
    <type>Date</type>
</CustomField>