unpackaged/main/default/objects/Job__c/fields/Additional_Structural_Photos_Needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Structural_Photos_Needed__c</fullName>
    <label>Additional Structural Photos Needed</label>
    <type>Date</type>
</CustomField>