unpackaged/main/default/objects/Job__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF(ISBLANK(Opportunity__c), ( Build_Only__r.Street__c  +  BR() +  Build_Only__r.City__c  + ', ' +  TEXT(Build_Only__r.State__c)  +  ' ' +  Build_Only__r.Zip_Code__c ) , (Opportunity__r.Account.BillingStreet +  BR() + Opportunity__r.Account.BillingCity + ', ' + Opportunity__r.Account.BillingState + ', ' + ' ' + Opportunity__r.Account.BillingPostalCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>