unpackaged/main/default/objects/Job__c/fields/Administrator_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Administrator_Contact_Information__c</fullName>
    <formula>Opportunity__r.Administrator_Contact__r.FirstName + " " +  Opportunity__r.Administrator_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Administrator Contact Information</label>
    <type>Text</type>
</CustomField>