unpackaged/main/default/objects/Job__c/fields/AHJ__c.field-meta.xml
<CustomField>
    <fullName>AHJ__c</fullName>
    <label>AHJ</label>
    <type>Date</type>
</CustomField>