unpackaged/main/default/objects/Job__c/fields/AHJ_Requirements_Met__c.field-meta.xml
<CustomField>
    <fullName>AHJ_Requirements_Met__c</fullName>
    <label>AHJ Requirements Met</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Jobs_Global_Pick_List</valueSetName>
    </valueSet>
</CustomField>