unpackaged/main/default/objects/Job__c/fields/Alchemy_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Alchemy_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alchemy Bypass</label>
    <type>Checkbox</type>
</CustomField>