unpackaged/main/default/objects/Job__c/fields/Anticipated_Payment_Date_CT__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Payment_Date_CT__c</fullName>
    <label>Anticipated Payment Date(CT)</label>
    <type>Date</type>
</CustomField>