unpackaged/main/default/objects/Job__c/fields/Anticipated_Payment_Date_IL__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Payment_Date_IL__c</fullName>
    <label>Anticipated Payment Date(IL)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mid-Jan</fullName>
            </value>
            <value>
                <fullName>mid-Apr</fullName>
            </value>
            <value>
                <fullName>mid-July</fullName>
            </value>
            <value>
                <fullName>mid-Oct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>