unpackaged/main/default/objects/Job__c/fields/App__c.field-meta.xml
<CustomField>
    <fullName>App__c</fullName>
    <label>App #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>