unpackaged/main/default/objects/Job__c/fields/Appeal_Denied__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Denied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appeal Denied</label>
    <type>Checkbox</type>
</CustomField>