unpackaged/main/default/objects/Job__c/fields/Appeal_Letter_Required__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Letter_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appeal Letter Required</label>
    <type>Checkbox</type>
</CustomField>