unpackaged/main/default/objects/Job__c/fields/Appeal_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Letter_Sent__c</fullName>
    <label>Appeal Letter Sent</label>
    <type>Date</type>
</CustomField>