unpackaged/main/default/objects/Job__c/fields/Appeal_Letter_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Letter_Submitted__c</fullName>
    <label>Appeal Letter Submitted</label>
    <type>Date</type>
</CustomField>