unpackaged/main/default/objects/Job__c/fields/Application_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Confirmed_Date__c</fullName>
    <label>Application Confirmed Date</label>
    <type>Date</type>
</CustomField>