unpackaged/main/default/objects/Job__c/fields/Application_Method__c.field-meta.xml
<CustomField>
    <fullName>Application_Method__c</fullName>
    <label>Application Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homeowner</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Online Portal</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>