unpackaged/main/default/objects/Job__c/fields/Application_Sent_for_Submittal__c.field-meta.xml
<CustomField>
    <fullName>Application_Sent_for_Submittal__c</fullName>
    <label>Application Sent for Submittal</label>
    <type>Date</type>
</CustomField>