unpackaged/main/default/objects/Job__c/fields/Application_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Application_Sent_To__c</fullName>
    <label>Application Sent To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homeowner</fullName>
            </value>
            <value>
                <fullName>HOA</fullName>
            </value>
            <value>
                <fullName>Management Company</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>