unpackaged/main/default/objects/Job__c/fields/Application_Submission_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Application_Submission_Confirmed__c</fullName>
    <label>Application Submission Confirmed</label>
    <type>Date</type>
</CustomField>