unpackaged/main/default/objects/Job__c/fields/Application_Submittal__c.field-meta.xml
<CustomField>
    <fullName>Application_Submittal__c</fullName>
    <label>Zendesk Ticket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>