unpackaged/main/default/objects/Job__c/fields/Approval_DATE__c.field-meta.xml
<CustomField>
    <fullName>Approval_DATE__c</fullName>
    <label>Approval DATE</label>
    <type>Date</type>
</CustomField>