unpackaged/main/default/objects/Job__c/fields/Approval_Required_for_AHJ_Permit__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required_for_AHJ_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Required for AHJ Permit</label>
    <type>Checkbox</type>
</CustomField>