unpackaged/main/default/objects/Job__c/fields/Array_Tilt__c.field-meta.xml
<CustomField>
    <fullName>Array_Tilt__c</fullName>
    <label>Array Tilt</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>