unpackaged/main/default/objects/Job__c/fields/As_built_Drawings__c.field-meta.xml
<CustomField>
    <fullName>As_built_Drawings__c</fullName>
    <label>As built Drawings</label>
    <type>Date</type>
</CustomField>