unpackaged/main/default/objects/Job__c/fields/As_built_drawings_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>As_built_drawings_Requested_Date__c</fullName>
    <label>As-built drawings Requested Date</label>
    <type>Date</type>
</CustomField>