unpackaged/main/default/objects/Job__c/fields/Attachments_and_Flashing__c.field-meta.xml
<CustomField>
    <fullName>Attachments_and_Flashing__c</fullName>
    <label>Attachments and Flashing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Missing Sealant</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
            <value>
                <fullName>Requires Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>