unpackaged/main/default/objects/Job__c/fields/Attachments_and_Flashing_Score__c.field-meta.xml
<CustomField>
    <fullName>Attachments_and_Flashing_Score__c</fullName>
    <formula>CASE( Attachments_and_Flashing__c , "Complete", 3, "Missing Sealant", 1, "Not Completed", 0, "Requires Service", -3, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachments and Flashing - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>