unpackaged/main/default/objects/Job__c/fields/Authorizer_User_Required__c.field-meta.xml
<CustomField>
    <fullName>Authorizer_User_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorizer User Required</label>
    <type>Checkbox</type>
</CustomField>