unpackaged/main/default/objects/Job__c/fields/Automation__c.field-meta.xml
<CustomField>
    <fullName>Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automation</label>
    <type>Checkbox</type>
</CustomField>