unpackaged/main/default/objects/Job__c/fields/Bill_com_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Bill_com_Notification_Sent__c</fullName>
    <label>Bill.com Notification Sent</label>
    <type>Date</type>
</CustomField>