unpackaged/main/default/objects/Job__c/fields/Blocker_Documentation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Blocker_Documentation_Notes__c</fullName>
    <label>Blocker Documentation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>