unpackaged/main/default/objects/Job__c/fields/BOM_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>BOM_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BOM Confirmed</label>
    <type>Checkbox</type>
</CustomField>