unpackaged/main/default/objects/Job__c/fields/BOS_Location_Meets_Working_Clearances__c.field-meta.xml
<CustomField>
    <fullName>BOS_Location_Meets_Working_Clearances__c</fullName>
    <label>BOS Location Meets Working Clearances</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Jobs_Global_Pick_List</valueSetName>
    </valueSet>
</CustomField>