unpackaged/main/default/objects/Job__c/fields/Box_Placement_Aesthetics__c.field-meta.xml
<CustomField>
    <fullName>Box_Placement_Aesthetics__c</fullName>
    <label>Box Placement Aesthetics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requires Service</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>