unpackaged/main/default/objects/Job__c/fields/Box_Placement_Aesthetics_Score__c.field-meta.xml
<CustomField>
    <fullName>Box_Placement_Aesthetics_Score__c</fullName>
    <formula>CASE( Box_Placement_Aesthetics__c , "Requires Service", -3, "Needs Improvement", 0, "Average", 1, "Satisfactory", 2, "Excellent", 3, "N/A", 3, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Box Placement Aesthetics - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>