unpackaged/main/default/objects/Job__c/fields/BP_Clawback__c.field-meta.xml
<CustomField>
    <fullName>BP_Clawback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BP Clawback</label>
    <type>Checkbox</type>
</CustomField>