unpackaged/main/default/objects/Job__c/fields/BP_Follow_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>BP_Follow_Up_Notes__c</fullName>
    <label>BP Follow Up Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>