unpackaged/main/default/objects/Job__c/fields/Build_Partner__c.field-meta.xml
<CustomField>
    <fullName>Build_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build Partner</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>