unpackaged/main/default/objects/Job__c/fields/Build_Partner_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Build_Partner_Capacity__c</fullName>
    <label>Build Partner Capacity</label>
    <type>Date</type>
</CustomField>