unpackaged/main/default/objects/Job__c/fields/Build_Partner_Permitting__c.field-meta.xml
<CustomField>
    <fullName>Build_Partner_Permitting__c</fullName>
    <label>Build Partner Permitting</label>
    <length>50</length>
    <type>Text</type>
</CustomField>