unpackaged/main/default/objects/Job__c/fields/Building_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>Building_Permit_Number__c</fullName>
    <label>Building Permit Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>