unpackaged/main/default/objects/Job__c/fields/Bus_Bar_Rating__c.field-meta.xml
<CustomField>
    <fullName>Bus_Bar_Rating__c</fullName>
    <label>Bus Bar Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acceptable</fullName>
            </value>
            <value>
                <fullName>Over 120%</fullName>
            </value>
            <value>
                <fullName>Requires Photo</fullName>
            </value>
            <value>
                <fullName>Requires Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>