unpackaged/main/default/objects/Job__c/fields/Bus_Bar_Rating_Score__c.field-meta.xml
<CustomField>
    <fullName>Bus_Bar_Rating_Score__c</fullName>
    <formula>CASE( Bus_Bar_Rating__c , "Acceptable", 3, "Over 120%", -3, "Requires Photo", 0, "Requires Service", -3, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bus Bar Rating - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>