unpackaged/main/default/objects/Job__c/fields/Cancelled_DATE__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_DATE__c</fullName>
    <label>Cancelled DATE</label>
    <type>Date</type>
</CustomField>