unpackaged/main/default/objects/Job__c/fields/Certification_Complete__c.field-meta.xml
<CustomField>
    <fullName>Certification_Complete__c</fullName>
    <label>Certification Complete</label>
    <type>Date</type>
</CustomField>