unpackaged/main/default/objects/Job__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <formula>TEXT(Opportunity__r.X3rd_Party_Partner__c )</formula>
    <label>Channel Partner</label>
    <type>Text</type>
</CustomField>