unpackaged/main/default/objects/Job__c/fields/CO_Lease_Amendment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>CO_Lease_Amendment_Received_Date__c</fullName>
    <label>CO/Lease Amendment Received Date</label>
    <type>Date</type>
</CustomField>