unpackaged/main/default/objects/Job__c/fields/CO_Lease_Amendment_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>CO_Lease_Amendment_Requested_Date__c</fullName>
    <label>CO/Lease Amendment Requested Date</label>
    <type>Date</type>
</CustomField>