unpackaged/main/default/objects/Job__c/fields/COC_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>COC_Received_Date__c</fullName>
    <label>COC Received Date</label>
    <type>Date</type>
</CustomField>