unpackaged/main/default/objects/Job__c/fields/COC_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>COC_Requested_Date__c</fullName>
    <label>COC Requested Date</label>
    <type>Date</type>
</CustomField>