unpackaged/main/default/objects/Job__c/fields/COI__c.field-meta.xml
<CustomField>
    <fullName>COI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COI</label>
    <type>Checkbox</type>
</CustomField>