unpackaged/main/default/objects/Job__c/fields/Combiner_Subpanel__c.field-meta.xml
<CustomField>
    <fullName>Combiner_Subpanel__c</fullName>
    <label>Combiner Subpanel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Illegible</fullName>
            </value>
            <value>
                <fullName>Missing Panel Cover Off</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
            <value>
                <fullName>Requires Service</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>