unpackaged/main/default/objects/Job__c/fields/Combiner_Subpanel_Score__c.field-meta.xml
<CustomField>
    <fullName>Combiner_Subpanel_Score__c</fullName>
    <formula>CASE( Combiner_Subpanel__c , "Complete", 3, "Illegible", 2, "Missing Panel Cover Off", 1, "Not Completed", 0, "Requires Service", -3, "N/A", null, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combiner Subpanel - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>