unpackaged/main/default/objects/Job__c/fields/Commissioning__c.field-meta.xml
<CustomField>
    <fullName>Commissioning__c</fullName>
    <label>Commissioning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inverter On, Paired, S_Ok, All Meters</fullName>
            </value>
            <value>
                <fullName>No Communication</fullName>
            </value>
            <value>
                <fullName>No Meters</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
            <value>
                <fullName>Non-RGM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>