unpackaged/main/default/objects/Job__c/fields/Commissioning_Score__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Score__c</fullName>
    <formula>CASE( Commissioning__c , "Inverter On, Paired, S_Ok, All Meters", 3, "No Communication", 0, "No Meters", 0, "Not Completed", 0, "Non-RGM", 0, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissioning - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>