unpackaged/main/default/objects/Job__c/fields/Comparison_PDF__c.field-meta.xml
<CustomField>
    <fullName>Comparison_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comparison PDF</label>
    <type>Checkbox</type>
</CustomField>