unpackaged/main/default/objects/Job__c/fields/Complete_Array__c.field-meta.xml
<CustomField>
    <fullName>Complete_Array__c</fullName>
    <label>Complete Array</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Completed</fullName>
            </value>
            <value>
                <fullName>Missing an Array</fullName>
            </value>
            <value>
                <fullName>Missing Some Modules</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>