unpackaged/main/default/objects/Job__c/fields/Complete_Array_Score__c.field-meta.xml
<CustomField>
    <fullName>Complete_Array_Score__c</fullName>
    <formula>CASE( Complete_Array__c , "Fully Completed", 3, "Missing an Array", 0, "Missing Some Modules", 0, "Not Completed", -3, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Array - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>