unpackaged/main/default/objects/Job__c/fields/Complete_Site_Condition_assessment__c.field-meta.xml
<CustomField>
    <fullName>Complete_Site_Condition_assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Site Condition assessment</label>
    <type>Checkbox</type>
</CustomField>