unpackaged/main/default/objects/Job__c/fields/Complex_Electrical_Layout__c.field-meta.xml
<CustomField>
    <fullName>Complex_Electrical_Layout__c</fullName>
    <label>Complex Electrical Layout</label>
    <type>Date</type>
</CustomField>