unpackaged/main/default/objects/Job__c/fields/Conduit_Run_Score__c.field-meta.xml
<CustomField>
    <fullName>Conduit_Run_Score__c</fullName>
    <formula>CASE( Conduit_Run__c , "Excellent", 3, "Satisfactory", 2, "Average", 1, "Needs Improvement", 0, "Requires Service", -3, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conduit Run - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>