unpackaged/main/default/objects/Job__c/fields/Conduit_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Conduit_Scoring__c</fullName>
    <formula>CASE( Conduit__c , "Needs Improvement", 0, "Average", 1, "Satisfactory", 2, "Excellent", 3, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conduit - Scoring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>