unpackaged/main/default/objects/Job__c/fields/Conduit_Waterproofing__c.field-meta.xml
<CustomField>
    <fullName>Conduit_Waterproofing__c</fullName>
    <label>Conduit Waterproofing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sealant used, weep holes drilled, arranged to drain</fullName>
            </value>
            <value>
                <fullName>Weep holes missed</fullName>
            </value>
            <value>
                <fullName>Not arranged to drain</fullName>
            </value>
            <value>
                <fullName>No Sealant inside or outside Conduit/bodies</fullName>
            </value>
            <value>
                <fullName>Requires service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>