unpackaged/main/default/objects/Job__c/fields/Conduit_waterproofing_Score__c.field-meta.xml
<CustomField>
    <fullName>Conduit_waterproofing_Score__c</fullName>
    <formula>CASE( Conduit_Waterproofing__c , "Sealant used, weep holes drilled, arranged to drain", 3, "Weep holes missed", 2, "Not arranged to drain", 1, "No Sealant inside or outside Conduit/bodies", 0, "Requires service", -3, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conduit waterproofing - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>