unpackaged/main/default/objects/Job__c/fields/Consumption_Report_For_less_than_12_mo__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Report_For_less_than_12_mo__c</fullName>
    <label>Consumption Report (For less than 12 mo</label>
    <type>Date</type>
</CustomField>