unpackaged/main/default/objects/Job__c/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <label>Contact Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>