unpackaged/main/default/objects/Job__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <formula>Opportunity__r.Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Id</label>
    <type>Text</type>
</CustomField>